[workspace]
members = ["egui_keyboard", "demo_android/rust", "demo", "demo_native"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
eframe = { version = "0.31", features = ["wgpu", "android-game-activity"] }
egui = "0.31"

#[patch.crates-io]
#egui = { path = "../egui/crates/egui" }
#egui-wgpu = { path = "../egui/crates/egui-wgpu" }
