[package]
name = "egui_keyboard"
version.workspace = true
repository = "https://github.com/podusowski/egui_keyboard"
description = "virtual keyboard widget for egui"
authors = ["Piotr Podusowski <podusowski@gmail.com>"]
license = "MIT"
categories = ["gui"]
edition = "2021"

[features]
default = ["clipboard"]
clipboard = ["dep:android_clipboard", "dep:arboard"]

[dependencies]
egui.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_clipboard = { version = "0.1.0", optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = { version = "3.4.1", default-features = false, optional = true }
