[package]
name = "demo_android"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
log = "0.4"
android_logger = "0.14"
eframe = { version = "0.30", features = ["wgpu", "android-game-activity"] }
egui-winit = "0.30"
egui_keyboard = { path = "../../egui_keyboard" }
demo = { path = "../../demo" }

[lib]
name = "main"
crate-type = ["cdylib"]
